@@ -8,6 +8,7 @@ NEW IN WAF 1.6.7
 * Fix the redirections with pipes (waf configure > log)
 * Do not display runnable_status exceptions when running with -k
 * Let -k stop at the first runnable_status error and -kk run even further
+* Merge the add_object extension in the main line (source='file.o')
 
 NEW IN WAF 1.6.6
 ----------------
